# volunteer_recue

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  manage.py  pyproject.toml
Docs/: Notes.md  TZ-ARM-redaktsiya-02.05.23-2.docx  actions.minder  project_structure.minder  role_models.minder  telegram_bot_actions_map.dia  telegram_bot_actions_map.minder  Проектная_документация_АРМ_Мещера.docx
telegram_bot/: bot.py
templates/: base.html  base_logged.html  index.html
templates/auth/: login.html  user_agreement.html  user_agreement.md
templates/components/: formset.html  logout.html  navbar.html
templates/logistics/: crew_list.html  departure_confirm_delete.html  departure_detail.html  departure_form.html  departure_list.html  searchrequest_confirm_delete.html  searchrequest_form.html
templates/search_requests/: searchrequest_detail.html  searchrequest_form.html  searchrequest_list.html  survey_confirm_delete.html  survey_detail.html  survey_form.html
templates/users/: customuser_confirm_delete.html  customuser_form.html  login.html
tgbot/: bot.py  logging_config.py  utils.py
web/: settings.py
web_dashboard/: asgi.py  settings.py  urls.py  views.py  wsgi.py
web_dashboard/auth/: urls.py  views.py
web_dashboard/bot_api/: admin.py  apps.py  models.py  urls.py  views.py
web_dashboard/custom_auth/: apps.py  forms.py  urls.py  views.py
web_dashboard/logistics/: admin.py  apps.py  crispy_formset_layout.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
web_dashboard/search_requests/: admin.py  (+7 more)
(+46 files in other folders)
